fixed vertical menu spacing

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,53 +1,22 @@
-.App {
+/* .App {
   text-align: center;
-  background-color: #f1d592;
-}
+  background-color:#f3d8a0;
+} */
 
-nav {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 10px;
-}
 
-img {
+/* img {
   -webkit-box-shadow: 7px 10px 11px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 7px 10px 11px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 7px 10px 11px 0px rgba(0, 0, 0, 0.75);
   max-width: 100%;
-}
+} */
 
 .my-photo {
   max-width: 20%;
 }
 
-.front-name {
-  font-family: "Special Elite", cursive;
-}
 
-.front-title {
-  font-family: "Oswald", sans-serif;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
